fix: 550 - remove unnecessary gap

--- a/src/widgets/mentors-wanted/ui/mentors-wanted.module.scss
+++ b/src/widgets/mentors-wanted/ui/mentors-wanted.module.scss
@@ -16,7 +16,6 @@
 .content-left {
   display: flex;
   flex-direction: column;
-  gap: 26px;
   max-width: 50%;
 
   @include media-tablet {
